--- a/hangman.html
+++ b/hangman.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,200&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
     <title>Hangman</title>
 </head>
 <body>
@@ -21,21 +22,11 @@
 
     <main>
         <div id="letters">
-           <button class="alphabet">A</button>
-           <button class="alphabet">A</button>
-           <button class="alphabet">A</button>
-           <button class="alphabet">A</button>
-           <button class="alphabet">A</button>
-           <button class="alphabet">A</button>
         </div>
         <div id="category">
             <span id="current-category">Piłka nożna</span>
         </div>
         <div id="answear">
-            <span class="answear-span">R</span>
-            <span class="answear-span">E</span>
-            <span class="answear-span">A</span>
-            <span class="answear-span">L</span>
         </div>
         <div id="game-stage">
             <label>Zostało Ci&nbsp;</label>
