--- a/hangman.html
+++ b/hangman.html
@@ -26,11 +26,15 @@
         <div id="category">
             <span id="current-category">Piłka nożna</span>
         </div>
+        <div id="hint-div">
+            <span id="hint-span">Dupka</span>
+        </div>
         <div id="answear">
+            <ul id="answear-ul"></ul>
         </div>
         <div id="game-stage">
-            <label>Zostało Ci&nbsp;</label>
-            <span id="lives">10 prób.</span>
+            <label>Pozostałe życia:&nbsp;</label>
+            <span id="lives"></span>
         </div>
         <div id="new-game">
             <button id="new-game-button">Nowa gra</button>
