--- a/hangman.html
+++ b/hangman.html
@@ -18,16 +18,18 @@
             <p>Masz ograniczoną liczbę dozwolonych błędów.</p>
             <p>Aby wygrać odgadnij hasło. Powodzenia!</p>
         </div>
+        
     </header>
 
     <main>
         <div id="letters">
         </div>
         <div id="category">
-            <span id="current-category">Piłka nożna</span>
+            <span id="current-category"></span>
         </div>
         <div id="hint-div">
-            <span id="hint-span">Dupka</span>
+            <span id="win-span"></span>
+            <span id="hint-span"></span> 
         </div>
         <div id="answear">
             <ul id="answear-ul"></ul>
